--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
             - name: setup node
               uses: actions/setup-node@v1
               with:
-                  node-version: 14.x
+                  node-version: 20.0.0
                   registry-url: https://npm.pkg.github.com
 
             - uses: pnpm/action-setup@v2.2.2
